# pixelapp

./: .gitignore  Cargo.toml  README.md
assets/css/: animation.css  font.css  main.css  pixelapp.css
assets/js/: animation_limb.js  animation_main.js  animation_setup.js  collections.js  drawmanager.js  keyHandlerUtils.js  main.js  menu_bar.js  pixelmanager.js  render.js  saved.js  saved_animations.js  setup.js  skeletonmanager.js  toolbar.js  toolmanager.js  upload_video.js
migrations/: 20231216171155_initial_table_design.sql  20240118172501_add-pallette-and-groups.sql  20241210062652_animation-limbs.sql  20241226161557_video-view-tables.sql
spritesheets/: .gitignore
src/: cli.rs  errors.rs  main.rs  utils.rs
src/db/: animation_models.rs  animation_queries.rs  mod.rs  models.rs  queries.rs  video_models.rs  video_queries.rs
src/image/: gif.rs  mod.rs  png.rs
src/server/: get_routes.rs  mod.rs  post_routes.rs  query_params.rs  search_query.rs
src/video/: mod.rs  proc.rs  video_utils.rs
templates/: 404.html  animation.html  animation_guide.html  index.html  newcollection.html  pixel.html  render.html  saved.html  setupanimation.html  setuppixel.html  video_upload.html
templates/animation/: animation.html  animation_menu.html  saved_animations.html  setupanimation.html
templates/pixel/: pixel.html  pixel_menu.html  setuppixel.html
templates/snippets/: animation_menubar.html  menubar.html  toolbar.html
templates/video/: video_listing.html  (+5 more)
web_original/: Makefile  adminuser.go  api.go  config.go  main.go  pixelapp.go  render.go  utils.go
(+50 files in other folders)
