[package]
name = "pixelapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.4.11", features = ["derive"] }
futures-util = "0.3.29"
handlebars = "4.5.0"
image = "0.24.7"
imageproc = "0.23.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = "1.0.193"
serde_json = "1.0.107"
# sqlite = "0.32.0"
sqlx = { version = "0.7.3", default-features = false, features = [ "runtime-tokio", "macros", "uuid", "chrono", "json", "migrate", "sqlite" ] }
sqlx-sqlite = "0.7.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
warp = "0.3.6"
